# banei-analytics

./: .gitignore  README.md  backfill.py  pyproject.toml  run_phase0.py  run_phase1.py
analytics/: bankroll_sim.py  composite_sim.py  eda.py  features.py  jockey_experiment.py  market_impact_sim.py  masters.py  plackett_luce.py  popularity_experiment.py  repeats.py  speed_figure.py  walk_forward.py  walk_forward_v2.py  walk_forward_v3.py  walk_forward_v4.py  walk_forward_v5.py  walk_forward_v6.py  walk_forward_v7_drop.py  water_adaptability.py
data/backtest/: baseline.parquet  full_period.parquet  v2_real_odds.parquet  v3_multi_bettype.parquet  v3_per_race_adapt.parquet  v4_4bettypes.parquet  v4_4bettypes_filter.parquet  v4_bets_log.parquet  v4_extended.parquet  v4_extended_bets_log.parquet  v5_spread_strategies.parquet  v6_full.parquet  v6_full_bets_log.parquet  v6_water_filt.parquet  v6_water_filt_bets_log.parquet  v7_pop_drop.parquet  v7_pop_drop_bets_log.parquet
data/checkpoints/: backfill_progress.json  netkeiba_combo_umatan_progress.json  netkeiba_odds_progress.json  test_phase2.json
data/parquet/: horse_pedigree.parquet  horse_water_classification.parquet  (+7 more)
docs/: findings.md
notebooks/: 02_backfill_colab.ipynb  03_eda.ipynb  05_backtest_colab.ipynb  06_netkeiba_odds_colab.ipynb  07_netkeiba_combo_odds_colab.ipynb
persist/: parquet_writer.py
scrapers/: fetcher.py  horse_info.py  netkeiba_combo_odds.py  netkeiba_odds.py  odds.py  race_page.py
scripts/: scrape_netkeiba_combo_odds.py  scrape_netkeiba_odds.py  scrape_pedigrees.py  scrape_today_odds.py
(+610 files in other folders)
